--- a/admin.html
+++ b/admin.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/index.css">
-    <link rel="stylesheet" href="./style/admin.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style/index.css" />
+    <link rel="stylesheet" href="./style/admin.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav id="navbar">
-        <a href="index.html">Home</a>
-        <a href="admin.html">Admin</a>
-        <a href="books.html">Books</a>
+      <a href="index.html">Home</a>
+      <a href="admin.html">Admin</a>
+      <a href="books.html">Books</a>
     </nav>
     <div>
-        <form id="form"> 
-            <h3>form to add new books...</h3>
-           <input type="text" placeholder="enter title" id="title">
-        <input type="text" placeholder="enter author" id="author">
+      <form id="form">
+        <h3>form to add new books...</h3>
+        <input type="text" placeholder="enter title" id="title" />
+        <input type="text" placeholder="enter author" id="author" />
         <select name="" id="select">
-            <option value="">select category</option>
-            <option value="fiction">Fiction</option>
-            <option value="comedy">Comedy</option>
-            <option value="technical">Technical</option>
+          <option value="">select category</option>
+          <option value="fiction">Fiction</option>
+          <option value="comedy">Comedy</option>
+          <option value="technical">Technical</option>
         </select>
-        <input type="submit" value="submit">
-
-        </form>
+        <input type="submit" value="submit" />
+      </form>
     </div>
     <div id="cont"></div>
-</body>
-<!-- <script src="./script/login.js"></script> -->
-<script src="./script/admin.js" type="module"></script>
-
+  </body>
+  <script src="./script/login.js"></script>
+  <script src="./script/admin.js" type="module"></script>
+  <script src="./script/books.js"></script>
+  <script src="./script/navbar.js"></script>
 </html>
