--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style/index.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav id="navbar">
-        <a href="index.html">Home</a>
-        <a href="admin.html">Admin</a>
-        <a href="books.html">Books</a>
+      <a href="index.html">Home</a>
+      <a href="admin.html">Admin</a>
+      <a href="books.html">Books</a>
     </nav>
     <div>
-        <form id="loginform">
-            <h3>Please login...</h3>
-            <input type="text" placeholder="enter your email" id="email">
-            <input type="password" placeholder="enter your password" id="password">
-            <input type="submit" value="Login">
-        </form>
+      <form id="loginform">
+        <h3>Please login...</h3>
+        <input type="text" placeholder="enter your email" id="email" />
+        <input
+          type="password"
+          placeholder="enter your password"
+          id="password"
+        />
+        <input type="submit" value="Login" />
+      </form>
     </div>
-    
-</body>
-<script src="script/login.js"></script>
-<script src="./script/admin.js" type="module"></script>
-
+  </body>
+  <script src="script/login.js"></script>
+  <script src="./script/admin.js" type="module"></script>
+  <script src="./script/books.js"></script>
+  <script src="./script/navbar.js"></script>
 </html>
