--- a/books.html
+++ b/books.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/index.css" />
+    <link rel="stylesheet" href="./style/books.css" />
     <title>Document</title>
   </head>
   <body>
@@ -12,9 +13,14 @@
       <a href="admin.html">Admin</a>
       <a href="books.html">Books</a>
     </nav>
+
+    <div id="button">
+        <button id="Available">Show Available Books</button>
+        <button id="Borrowed">Show Borrowed Books</button>
+
+    </div>
   </body>
   <script src="./script/login.js"></script>
   <script src="./script/admin.js" type="module"></script>
-  <script src="./script/books.js"></script>
-  <script src="./script/navbar.js"></script>
+  <script src="./script/books.js" type="module" ></script>
 </html>
